# Adaptive_And_Load_Balanced_Video_Streaming_CDN

./: .gitignore  README.md  download_deps.sh
cpp/: CMakeLists.txt
cpp/src/: CMakeLists.txt
cpp/src/adaptiveProxy/: CMakeLists.txt  Random.h  adaptiveProxy.cpp  http.cpp  http.h
cpp/src/common/: CMakeLists.txt  loadBalancer_protocol.h  network_utils.cpp  network_utils.h
cpp/src/loadBalancer/: CMakeLists.txt  dijkstra.cpp  djikstra.h  loadBalancer.cpp
videoserver/: videoserver.py
videoserver/static/: index.html
videoserver/static/videos/cuhk/: vid-no-list.mpd  vid.mpd
videoserver/static/videos/cuhk/audio/en/mp4a.40.2/: seg-1.m4s  seg-10.m4s  seg-11.m4s  seg-12.m4s  seg-13.m4s  seg-14.m4s  seg-15.m4s  seg-16.m4s  (+90 more)
videoserver/static/videos/cuhk/video/: vid-1100-seg-1.m4s  vid-1100-seg-10.m4s  vid-1100-seg-11.m4s  vid-1100-seg-12.m4s  vid-1100-seg-13.m4s  vid-1100-seg-14.m4s  vid-1100-seg-15.m4s  vid-1100-seg-16.m4s  vid-1100-seg-17.m4s  vid-1100-seg-18.m4s  vid-1100-seg-19.m4s  vid-1100-seg-2.m4s  vid-1100-seg-20.m4s  vid-1100-seg-21.m4s  vid-1100-seg-22.m4s  vid-1100-seg-23.m4s  vid-1100-seg-24.m4s  vid-1100-seg-25.m4s  vid-1100-seg-26.m4s  vid-1100-seg-27.m4s  vid-1100-seg-28.m4s  vid-1100-seg-29.m4s  vid-1100-seg-3.m4s  vid-1100-seg-30.m4s  vid-1100-seg-31.m4s  vid-1100-seg-32.m4s  vid-1100-seg-33.m4s  vid-1100-seg-34.m4s  vid-1100-seg-35.m4s  vid-1100-seg-36.m4s  vid-1100-seg-37.m4s  vid-1100-seg-38.m4s  vid-1100-seg-39.m4s  vid-1100-seg-4.m4s  vid-1100-seg-40.m4s  vid-1100-seg-41.m4s  vid-1100-seg-42.m4s  vid-1100-seg-43.m4s  vid-1100-seg-44.m4s  vid-1100-seg-45.m4s  (+348 more)
videoserver/templates/: video_player.html
